# NightmarOS

./: .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  STYLEGUIDE.md
documentation/: COMMITS.md  STYLEGUIDE.md
kernel/: .gitignore  Makefile
kernel/arch/i386/: make.config
kernel/arch/i386/GDT/: gdt.cpp  gdt_flush.s
kernel/arch/i386/TTY/: tty.cpp
kernel/arch/i386/boot/: boot.s  crti.s  crtn.s  linker.ld
kernel/arch/i386/fs/: fs.cpp
kernel/arch/i386/gdt/: gdt.cpp
kernel/arch/i386/heap/: heap.cpp  orderedArray.cpp
kernel/arch/i386/idt/: idt.cpp  idt_flush.s
kernel/arch/i386/interrupts/: interrupts.cpp
kernel/arch/i386/paging/: memory_manager.cpp  paging.cpp  (+2 more)
kernel/include/kernel/: cpp_support.h  kdefines.h  kernel.h
kernel/kernel/: cpp_support.cpp  kernel.cpp
kernel/kernel/keyboard/: keyboard.cpp
kernel/kernel/logs/: log.cpp  logs.cpp
kernel/kernel/panic/: panic.cpp
kernel/kernel/ports/: ports.cpp
kernel/kernel/shell/: shell.cpp
libc/: .gitignore  Makefile
libc/include/libc/: containers.h  ldefines.h  stdio.h  stdlib.h  string.h
libc/libc/containers/: orderedArray.cpp
libc/libc/stdio/: getc.cpp  geti.cpp  gets.cpp  printf.cpp  putchar.cpp
libc/libc/stdlib/: abort.cpp  atoi.cpp  calloc.cpp  free.cpp  malloc.cpp
libc/libc/string/: memcpy.cpp  memset.cpp  strcmp.cpp  strcpy.cpp  strlen.cpp  strncpy.cpp
scripts/: build-gcc.sh  build.sh  clean.sh  configure.sh  cross-toolchain.sh  debug.sh  default-arch.sh  default-host.sh  headers.sh  is-multiboot.sh  iso.sh  run.sh  target-triplet-to-arch.sh
tests/kernel/: t_gdt.cpp
(+41 files in other folders)
